--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/Ebu44/Live-Ball-SocketIO",
   "dependencies": {
     "angular": "^1.8.2",
-    "semantic": "^2.4.1"
+    "semantic": "^2.4.1",
+    "jquery": "^3.5.1"
   }
 }
